# rustMusic

./: .gitignore  Cargo.toml  README.md  android_enabler.sh  install.sh
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/: RustGreetings.java
android/gradle/wrapper/: gradle-wrapper.properties
rust/: Cargo.toml
rust/src/: lib.rs
src/: main.rs
